<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1D284D"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:text="@string/textview_censo"
        android:textColor="#F4F7F8"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="#2D3254"
        android:text="@string/textview_AyN"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="#2D3254"
        android:text="@string/textview_correo"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="#2D3254"
        android:text="@string/textview_clave"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:background="#2D3254"
        android:text="@string/textview_telefono"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="#2D3254"
        android:text="@string/textview_fecha"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="#2D3254"
        android:text="@string/textview_hora"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="#2D3254"
        android:text="@string/textview_residencia"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="#2D3254"
        android:text="@string/textview_personavivienda"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="#2D3254"
        android:text="@string/textview_sueldo"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="#2D3254"
        android:text="@string/textview_bono"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="#2D3254"
        android:text="@string/textview_mascot"
        android:textColor="#F4F7F8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/button_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/button_enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#9594A9"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#9594A9"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#9594A9"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="phone"
        android:textColor="#9594A9"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="date"
        android:textColor="#9594A9"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="27dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="time"
        android:textColor="#9594A9"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <RadioGroup
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton_urbano"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#103D60"
            android:text="@string/radiobutton_urbano" />

        <RadioButton
            android:id="@+id/radioButton_rural"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#103D60"
            android:text="@string/radiobutton_rural" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="number"
        android:textColor="#9594A9"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:background="#103D60"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#9594A9"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView2"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#103D60"
        android:textColor="#9594A9"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/checkBox_gato"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="6dp"
        android:background="#103D60"
        android:text="@string/checkbox_gato"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <CheckBox
        android:id="@+id/checkBox_pollo"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="6dp"
        android:background="#103D60"
        android:text="@string/checkbox_pollo"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <CheckBox
        android:id="@+id/checkBox_pato"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:background="#103D60"
        android:text="@string/checkbox_pato"
        app:layout_constraintStart_toStartOf="@+id/checkBox_pollo"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_pollo" />

    <CheckBox
        android:id="@+id/checkBox_perro"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:background="#103D60"
        android:text="@string/checkbox_perro"
        app:layout_constraintStart_toStartOf="@+id/checkBox_gato"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_gato" />

    <CheckBox
        android:id="@+id/checkBox_otro"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="6dp"
        android:background="#103D60"
        android:text="@string/checkbox_otro"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>